--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         }
     ],
     "require": {
+        "php": ">=5.6.0",
         "topthink/framework": "^5.0",
         "topthink/think-captcha": "dev-master",
         "lmxdawn/think-auth": "dev-master",
-        "lmxdawn/think-tree": "dev-master"
+        "lmxdawn/think-tree": "dev-master",
+        "ext-xsl": "*"
     },
     "extra": {
         "think-path": "thinkphp"
