--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,11 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
+        "php": ">=5.4.0",
         "topthink/framework": "^5.0",
         "topthink/think-captcha": "dev-master",
         "lmxdawn/think-auth": "dev-master",
-        "lmxdawn/think-tree": "dev-master",
-        "ext-gd": "*",
-        "ext-gettext": "*",
-        "ext-mbstring": "*"
+        "lmxdawn/think-tree": "dev-master"
     },
     "extra": {
         "think-path": "thinkphp"
